# WAVM

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  LICENSE.txt  README.md  THIRD-PARTY.md  VERSION  WebAssembly.tmLanguage  azure-pipelines.yml  azure-windows-build-job-template.yml  polyfill.AUTHORS  run-clang-format.sh  travis-build.sh  vs-chromium-project.txt
Lib/Emscripten/: CMakeLists.txt  Emscripten.cpp  EmscriptenABI.h  EmscriptenPrivate.h  EmscriptenThreads.cpp
Lib/IR/: CMakeLists.txt  DisassemblyNames.cpp  FeatureSpec.cpp  FloatPrinting.cpp  Module.cpp  Operators.cpp  RandomModule.cpp  Types.cpp  Validate.cpp
Lib/LLVMJIT/: CMakeLists.txt  Disassembler.cpp  EmitContext.h  EmitConvert.cpp  EmitCore.cpp  EmitExceptions.cpp  EmitFunction.cpp  EmitFunctionContext.h  EmitMem.cpp  EmitModule.cpp  EmitModuleContext.h  EmitNumeric.cpp  EmitTable.cpp  EmitVar.cpp  EmitWorkarounds.h  GDBRegistration.cpp  LLVMCompile.cpp  LLVMEmitContext.h  LLVMEmitConvert.cpp  LLVMEmitCore.cpp  LLVMEmitExceptions.cpp  LLVMEmitFunction.cpp  LLVMEmitFunctionContext.h  LLVMEmitMem.cpp  LLVMEmitModule.cpp  LLVMEmitModuleContext.h  LLVMEmitNumeric.cpp  LLVMEmitTable.cpp  LLVMEmitVar.cpp  LLVMEmitWorkarounds.h  LLVMJIT.cpp  LLVMJITCompile.cpp  LLVMJITLoad.cpp  LLVMJITPrivate.h  LLVMJITThunk.cpp  LLVMModule.cpp  LLVMWin64EH.cpp  Thunk.cpp  Win64EH.cpp
Lib/Logging/: CMakeLists.txt  Logging.cpp
Lib/Platform/: CMakeLists.txt  POSIX.cpp  Windows.asm  Windows.cpp
Lib/Runtime/: Atomics.cpp  CMakeLists.txt  Compartment.cpp  Context.cpp  Diagnostics.cpp  Exception.cpp  Global.cpp  Instance.cpp  Intrinsics.cpp  Invoke.cpp  LLVMEmitContext.h  LLVMEmitCore.cpp  LLVMEmitExceptions.cpp  LLVMEmitFunction.cpp  LLVMEmitFunctionContext.h  LLVMEmitMem.cpp  LLVMEmitModule.cpp  LLVMEmitModuleContext.h  LLVMEmitVar.cpp  LLVMJIT.cpp  LLVMJIT.h  LLVMJITThunk.cpp  LLVMJITUnit.cpp  LLVMWin64EH.cpp  Linker.cpp  Memory.cpp  Module.cpp  ModuleInstance.cpp  ObjectCache.cpp  ObjectGC.cpp  ResourceQuota.cpp  Runtime.cpp  RuntimePrivate.h  Table.cpp  WAVMIntrinsics.cpp
Lib/ThreadTest/: CMakeLists.txt  ThreadTest.cpp
Lib/WASM/: CMakeLists.txt  WASMSerialization.cpp
Lib/WAST/: CMakeLists.txt  IsNameChar.h  Lexer.cpp  Lexer.h  NFA.cpp  NFA.h  Parse.cpp  Parse.h  ParseFunction.cpp  ParseModule.cpp  ParseNumbers.cpp  ParseTests.cpp  Print.cpp  Regexp.cpp
Lib/WASTParse/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parse.cpp  Parse.h  ParseFunction.cpp  ParseModule.cpp  ParseNumbers.cpp  ParseTests.cpp
Source/: CLI.cpp  CMakeLists.txt  Decode.cpp  EmscriptenIntrinsics.cpp  Intrinsics.cpp  Intrinsics.h  JIT.cpp  Memory.cpp  Memory.h  SExpressions.cpp  SExpressions.h  WASM.h  WAVM.h  Windows.cpp
Source/ASMJS/: ASMJS.h  ASMJSPrinter.cpp  CMakeLists.txt
Source/AST/: AST.cpp  AST.h  ASTDispatch.h  ASTExpressions.h  ASTOpcodes.h  ASTTypes.h  CMakeLists.txt
Source/Common/: CLI.h  Memory.cpp  Memory.h  SExpressions.cpp  SExpressions.h  WAVM.h  Windows.cpp
Source/Core/: CLI.h  CMakeLists.txt  Core.h  Diagnostics.cpp  Floats.h  Memory.cpp  Memory.h  MemoryArena.cpp  MemoryArena.h  POSIX.cpp  Platform.h  SExpressions.cpp  SExpressions.h  Windows.cpp
Source/Emscripten/: CMakeLists.txt  Emscripten.cpp
Source/IR/: CMakeLists.txt  DisassemblyNames.cpp  Operators.cpp  Types.cpp  Validate.cpp
Source/Logging/: CMakeLists.txt  Logging.cpp
Source/Platform/: CMakeLists.txt  POSIX.S  POSIX.cpp  Windows.cpp
Source/Programs/: Assemble.cpp  CLI.h  CMakeLists.txt  Disassemble.cpp  DumpTestModules.cpp  PrintASMJS.cpp  PrintWAST.cpp  Run.cpp  RuntimeCLI.h  Test.cpp  wavm.cpp
Source/Runtime/: Atomics.cpp  CMakeLists.txt  EmscriptenIntrinsics.cpp  Exception.cpp  Intrinsics.cpp  Intrinsics.h  LLVMEmitConvert.cpp  LLVMEmitCore.cpp  LLVMEmitExceptions.cpp  LLVMEmitFunction.cpp  LLVMEmitFunctionContext.h  LLVMEmitIR.cpp  LLVMEmitMem.cpp  LLVMEmitModule.cpp  LLVMEmitModuleContext.h  LLVMEmitNumeric.cpp  LLVMEmitVar.cpp  LLVMEmitWorkarounds.h  LLVMJIT.cpp  LLVMJIT.h  LLVMPostInclude.h  LLVMPreInclude.h  LLVMWin64EH.cpp  Linker.cpp  Linker.h  Memory.cpp  ModuleInstance.cpp  ObjectGC.cpp  Runtime.cpp  Runtime.h  RuntimePOSIX.cpp  RuntimePrivate.h  RuntimeWindows.cpp  SpecTestIntrinsics.cpp  Table.cpp  TaggedValue.h  Threads.cpp  WAVMIntrinsics.cpp  WebAssemblyIntrinsics.cpp
Source/ThreadTest/: CMakeLists.txt  ThreadTest.cpp
Source/WASM/: CMakeLists.txt  WASMSerialization.cpp
Source/WAST/: CMakeLists.txt  Lexer.cpp  Lexer.h  NFA.cpp  NFA.h  Parse.cpp  Parse.h  ParseFunction.cpp  ParseModule.cpp  ParseNumbers.cpp  ParseTests.cpp  Print.cpp  Regexp.cpp  Regexp.h  WASTParse.cpp  WASTPrint.cpp  WASTSymbols.cpp
Source/Wavix/: CMakeLists.txt  errno.h  file.cpp  file.h  memory.cpp  process.cpp  process.h  wavix.cpp  wavix.h
Source/WebAssembly/: CMakeLists.txt  Operations.cpp  OperatorLoggingProxy.h  Types.cpp  Types.h  Validate.cpp  WASMSerialization.cpp  WebAssembly.h  WebAssemblyBinary.cpp  WebAssemblyText.cpp  WebAssemblyTextParse.cpp  WebAssemblyTextPrint.cpp  WebAssemblyTextSymbols.cpp  WebAssemblyTextSymbols.h
Test/: CMakeLists.txt  a01.wasm  a02.wasm  a03.wasm  a04.wasm  a05.wasm  a07.wasm  a11.wasm  a14.wasm  bulk_memory_ops.wast  exceptions.wast  fuzz_regression.wast  llvm_bugs.wast  misc.wast  multi_memory.wast  reference_types.wast  simd.wast  syntax_recursion.wast  threads.wast  trunc_sat.wast  wat_custom_section.wast  wavm_atomic.wast
Test/Benchmark/: Benchmark.cpp  Benchmark.wast  a.out.asm.js  a.out.js  a.out.js.mem  a.out.raw.js  a.out.trimmed.js  a.out.wasm  a.out.wast  zlib-trimmed.js  zlib.js  zlib.js.mem  zlib.wasm
Test/Benchmarks/: CMakeLists.txt  invoke-bench.cpp
Test/Blake2b/: blake2b.wast
Test/Containers/: CMakeLists.txt  HashMapTest.cpp  HashSetTest.cpp
Test/DumpTestModules/: CMakeLists.txt  DumpTestModules.cpp
Test/FunctionTableBenchmark/: Benchmark.cpp  PerformanceComparison.csv  WithFunctionPrefixCheck.asm  WithFunctionPrefixCheck.ll  WithoutFunctionPrefixCheck.asm  WithoutFunctionPrefixCheck.ll  a.out.wasm
Test/I128/: CMakeLists.txt  (+1 more)
(+733 files in other folders)
